# convert_wav_to_opus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  convert_wav_to_aac.py  convert_wav_to_opus.py  pyproject.toml
.github/workflows/: ci.yml
src/convert_wav_to_aac/: __init__.py  __main__.py  cli.py  core.py
src/convert_wav_to_opus/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
