[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convert_wav_to_opus"
version = "0.1.0"
description = "Convert audio files to Opus or AAC using ffmpeg."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Daniel Kwon" }]
license = { file = "LICENSE" }
keywords = ["audio", "ffmpeg", "opus", "conversion"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Conversion",
  "Topic :: Multimedia :: Sound/Audio :: Editors",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.3",
]

[project.scripts]
convert_wav_to_opus = "convert_wav_to_opus.cli:main"
convert_wav_to_aac = "convert_wav_to_aac.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["convert_wav_to_opus"]
